dhall/tests/type-errors/unit/AssertNotEquivalence.txt
Type error: error: AssertMustTakeEquivalence
 --> <current file>:1:0
  |
1 | assert : Bool
  | ^^^^^^^^^^^^^ AssertMustTakeEquivalence
  |
